Content of 0th post

--- a/_posts/2016-04-03-post0.md
+++ b/_posts/2016-04-03-post0.md
@@ -7,8 +7,11 @@ summary: New beginnings
 image: /images/blog/post1.jpg
 ---
 
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+Hello, 
 
+I am starting blog posts (again). Maybe you know but posting blog is some kind hard. One of my blog was hacked, one of it has expired and so on. Some how, I lost their content. I am not deeply searched at all. Anyway, I try to write something here regularly. Some of them are just for me, some of them you may be helpful. If you want to add or change, please feel free to send me pull request. 
 
-### Some foxes jumped over stuff mate
+### Video for Turkish Speakers: #40sabahErkenKalk
+
+https://www.youtube.com/watch?v=vivmNq-Znfs
 
