--- a/_posts/2016-04-03-post0.md
+++ b/_posts/2016-04-03-post0.md
@@ -11,7 +11,7 @@ Hello,
 
 I am starting blog posts (again). Maybe you know but posting blog is some kind hard. One of my blog was hacked, one of it has expired and so on. Some how, I lost their content. I am not deeply searched at all. Anyway, I try to write something here regularly. Some of them are just for me, some of them you may be helpful. If you want to add or change, please feel free to send me pull request. 
 
-### Video for Turkish Speakers: #40sabahErkenKalk
+### Video for Turkish Speakers: [#40sabahErkenKalk]
 
-https://www.youtube.com/watch?v=vivmNq-Znfs
+[#40sabahErkenKalk]: <https://www.youtube.com/watch?v=vivmNq-Znfs>
 
