--- a/_posts/2016-04-25-post2.md
+++ b/_posts/2016-04-25-post2.md
@@ -4,7 +4,7 @@ title: "Increasing Income"
 category: blog
 tags: [human]  
 summary: 1000% Formula from Brian Tracy
-image: /images/blog/post2.jpg
+image: /images/blog/post3.jpg
 ---
 
 1. Get up early and read a book related to your work for an hour.
@@ -13,11 +13,11 @@ image: /images/blog/post2.jpg
 4. Start the most prioritezed item on your list and work until it is done. Clear them out one by one.
 5. Change your car into classtroom.
 6. Ask yourself 2 questions after each call, event, etc.:
-  1. What did I do right?
-  2. What would I do differently next time?
+  * What did I do right?
+  * What would I do differently next time?
 7. Treat everyone like a million dollar customer.
 
-### Source video for with Turkish subtitle: [Brian Tracy]
+### Source video with Turkish subtitle: [Brian Tracy]
 
 [Brian Tracy]: <https://www.youtube.com/watch?v=bGw8M6oLwQ8>
 
