* Move to kramdown * Edit

--- a/_posts/2016-04-28-post4.md
+++ b/_posts/2016-04-28-post4.md
@@ -7,7 +7,7 @@ summary: [Definite and negative indefinite]
 image: /images/blog/post5.jpg
 ---
 
-I do not write how German language hard but I want to write definite and negative indefinite articles. If you delete \"k\" at the beginning of the negative indefinite article, surprisingly without an exeption, you will get regular indefinite article. I just do not want to repeat similar table again.
+I do not write how German language hard but I want to write definite and negative indefinite articles. If you delete "k" at the beginning of the negative indefinite article, surprisingly without an exeption, you will get regular indefinite article. I just do not want to repeat similar table again.
 
 # Definite
 |   | Nom | Acc | Dat |
