--- a/_posts/2016-06-23-post6.md
+++ b/_posts/2016-06-23-post6.md
@@ -7,12 +7,12 @@ summary: to influence people
 image: /images/blog/post7.jpg
 ---
 
-[5 psychology tricks to influence people and get what you want]
-1. Give Compliments
-2. Mimic
-3. Use nouns instead of verbs
-4. Use a handwritten note
-5. Use people`s names
+#[5 psychology tricks to influence people and get what you want]
+1. Give Compliments.
+2. Mimic.
+3. Use nouns instead of verbs.
+4. Use a handwritten note.
+5. Use people`s names.
 
 [5 psychology tricks to influence people and get what you want]: <http://www.techinsider.io/influence-people-strategy-psychology-2016-3>
 
