--- a/_posts/2016-08-08-post8.md
+++ b/_posts/2016-08-08-post8.md
@@ -7,11 +7,10 @@ summary: Success Story
 image: /images/blog/post9.jpg
 ---
 
-**G**ive it your all
-**R**edo if necessary
-**I**gnore giving up
-**T**ake time to do it right
-
+**G**ive it your all.
+**R**edo if necessary.
+**I**gnore giving up.
+**T**ake time to do it right.
 
 
 [OptaPlanner]: <http://www.optaplanner.org/blog/2016/08/07/ADecadeOfOptaPlanner.html>
