--- a/_posts/2016-08-08-post8.md
+++ b/_posts/2016-08-08-post8.md
@@ -12,6 +12,6 @@ image: /images/blog/post9.jpg
 **I**gnore giving up.
 **T**ake time to do it right.
 
-
+Success Story: [OptaPlanner]
 [OptaPlanner]: <http://www.optaplanner.org/blog/2016/08/07/ADecadeOfOptaPlanner.html>
 
