--- a/_posts/2016-08-08-post8.md
+++ b/_posts/2016-08-08-post8.md
@@ -16,6 +16,5 @@ image: /images/blog/post9.jpg
 **T**ake time to do it right.
 
 
-Success Story: [OptaPlanner]
-[OptaPlanner]: <http://www.optaplanner.org/blog/2016/08/07/ADecadeOfOptaPlanner.html>
+Success Story: [OptaPlanner]: <http://www.optaplanner.org/blog/2016/08/07/ADecadeOfOptaPlanner.html>
 
