--- a/_posts/2017-09-21-post11.md
+++ b/_posts/2017-09-21-post11.md
@@ -28,11 +28,16 @@ I always wonder how the plants are apart from each other and how big they are. O
             .domain([0, 140000])
             .range([0, 50]);
 
-        var canvas = d3.select("body")
+        var canvas = d3.select("content")
             .append("svg")
             .attr("width", width)
             .attr("height", height)
             .append("g");
+
+        canvas.append("rect")
+            .attr("width", "100%")
+            .attr("height", "100%")
+            .attr("fill", "#ddd");
 
         canvas.selectAll("circle")
             .data(data)
