Try page tag for appending svg

--- a/_posts/2017-09-21-post11.md
+++ b/_posts/2017-09-21-post11.md
@@ -28,7 +28,7 @@ I always wonder how the plants are apart from each other and how big they are. O
             .domain([0, 140000])
             .range([0, 50]);
 
-        var canvas = d3.select("content")
+        var canvas = d3.select("page")
             .append("svg")
             .attr("width", width)
             .attr("height", height)
