--- a/_posts/2017-09-21-post11.md
+++ b/_posts/2017-09-21-post11.md
@@ -13,6 +13,8 @@ Some of the adjectives are too confusing, for instance **expensive**. How much a
 
 I always wonder how the plants are apart from each other and how big they are. Of course, there are lots of data about it but I would like to see comparison of the distance to sun and their diameters in one picture. So here it is:
 
+<svg width="900" height="200"></svg>
+
 <script type="text/javascript" src="http://d3js.org/d3.v4.min.js"></script>
 <script type="text/javascript">
 
@@ -28,10 +30,7 @@ I always wonder how the plants are apart from each other and how big they are. O
             .domain([0, 140000])
             .range([0, 50]);
 
-        var canvas = d3.select("page")
-            .append("svg")
-            .attr("width", width)
-            .attr("height", height)
+        var canvas = d3.select("svg")
             .append("g");
 
         canvas.append("rect")
