--- a/_posts/2017-09-21-post11.md
+++ b/_posts/2017-09-21-post11.md
@@ -11,16 +11,18 @@ tldr, too big. Here is the comparison of solar system planets.
 
 Some of the adjectives are too confusing, for instance **expensive**. How much a thing will cost makes it an expensive item? Well, of course depends on which item it is but your *pay cheque* also effects the answer. But some of the values are almost never use in real life. If you live in US, you can spend $10 in a market for food or $100 if you buy a lot of stuff but never spend $1M for food in the market at least. Let say the range would be 0 to 300 or even more 1000. If one of your friend tells that s/he spent $10K on the market, you do not beleive or that does not makes sense for you. What if your friend says, s/he spent $6000000000? 
 
-I always wonder how the plants are apart from each other and how big they are. Of course, there are lots of data about it but I would like to see comparison of the distance to sun and their diameters in one picture. So here it is:
+I always wonder how the plants are apart from each other and how big they are. Of course, there are lots of data about it but I would like to see comparison of the distance to sun and their diameters in one picture. Better to look at full screen. So here it is:
 
-<svg width="900" height="200"></svg>
+<svg width="780" height="180"></svg>
+
+These planets placed in scable distance to sun and drew in scalable diameter to each other but the distances (million km) and the diameter measurement (km) are in different scale.
 
 <script type="text/javascript" src="http://d3js.org/d3.v4.min.js"></script>
 <script type="text/javascript">
 
     d3.csv("https://raw.githubusercontent.com/ckilimci/d3-examples/master/solar-system.csv", function (data) {
-        var width = 900;
-        var height = 200;
+        var width = 780;
+        var height = 180;
 
         var distanceScale = d3.scaleLinear()
             .domain([0, 6000])
@@ -60,10 +62,6 @@ I always wonder how the plants are apart from each other and how big they are. O
 
         canvas.append("g")
             .call(axis);
-
-        d3.select("body")
-            .append("p")
-            .text("These planets placed in scable distance to sun and drew in scalable diameter to eachother but the distances (million km) and the diameter measurement (km) are in different scale.");
     });
 
 </script>
