--- a/_posts/2017-09-21-post11.md
+++ b/_posts/2017-09-21-post11.md
@@ -17,7 +17,7 @@ I always wonder how the plants are apart from each other and how big they are. O
 
 These planets placed in scable distance to sun and drew in scalable diameter to each other but the distances (million km) and the diameter measurement (km) are in different scale.
 
-<script type="text/javascript" src="http://d3js.org/d3.v4.min.js"></script>
+<script type="text/javascript" src="https://d3js.org/d3.v4.min.js"></script>
 <script type="text/javascript">
 
     d3.csv("https://raw.githubusercontent.com/ckilimci/d3-examples/master/solar-system.csv", function (data) {
